# fractals-rs

./: Cargo.toml
src/: app.rs  gpu.rs  main.rs  math.rs  render.rs
