[package]
name = "fractals-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
winit = "0.30.13"
pollster = "0.4.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "wgsl", "vulkan"] }
dashu-int = "0.4.1"

[profile.release]
panic = "abort"
