[package]
name = "fractals-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.11.0"
winit = "0.30.13"
pollster = "0.4.0"
num-traits = "0.2.19"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "wgsl", "vulkan"] }
dashu-int = { version = "0.4.1", features = ["num-traits_v02", "std"] }

[profile.release]
#codegen-units = 1
#lto = "thin"
panic = "abort"
